--- a/.github/workflows/main_prxh-news-scraper.yml
+++ b/.github/workflows/main_prxh-news-scraper.yml
@@ -44,6 +44,7 @@ jobs:
           path: release.tar.gz
 
   deploy:
+    if: false # disables azure deploy step
     runs-on: ubuntu-latest
     needs: build
     permissions:
